# behavioral-auth

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-windows.txt  requirements.txt
config/: config.dev.yaml  config.prod.yaml  config.yaml
db/: schema.sql
db/migrations/: 001_init.sql  002_face.sql
src/behavioral_auth/: __init__.py  __main__.py  config.py  db.py
src/behavioral_auth/cli/: collector_cmd.py  face_cmd.py  features_cmd.py  infer_cmd.py  report_cmd.py  status_cmd.py  train_cmd.py  verify_cmd.py
src/behavioral_auth/collector/: device_detector.py  evdev_source.py  writer.py
src/behavioral_auth/face/: __init__.py  detector.py  enroll.py  gui.py  recognizer.py  verify.py
src/behavioral_auth/features/: context.py  keystroke.py  mouse.py  pipeline.py  scaler.py
src/behavioral_auth/inference/: decision.py  fusion.py  howdy.py  runtime.py
src/behavioral_auth/models/: encoder.py  onnx_export.py
src/behavioral_auth/reporting/: metrics.py
src/behavioral_auth/training/: dataset.py  thresholds.py  train.py
src/scripts/: bootstrap_db.py  fedora-install.sh  timer-install.sh  ubuntu-install.sh  windows-install.ps1
systemd/system/: behavioral-feature.service  behavioral-feature.timer
systemd/user/: behavioral-collector.service  behavioral-feature.service  behavioral-inference.service
tests/: test_face.py
